feat: v1-hello world

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "go.inferGopath": true,
+  "go.inferGopath": false,
   "go.useLanguageServer": true,
   "gopls": {
     "experimentalWorkspaceModule": true,
