--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,8 @@
     "experimentalWorkspaceModule": true,
     "formatting.gofumpt": true,
   },
+  "go.lintTool": "golangci-lint",
+  "go.lintFlags": [
+    "--fast"
+  ]
 }
