--- a/lefthook.yml
+++ b/lefthook.yml
@@ -46,7 +46,8 @@ pre-commit:
   commands:
     golangci-lint:
       tags: gotool
-      run: golangci-lint run ./... --config .golangci.yml --fix
+      # files: git ls-files *.go
+      run: golangci-lint run --config .golangci.yml --fix ./src/001-hello-world --disable typecheck
     markdownlint:
       tags: docker
       name: markdownlint-autofix
@@ -62,3 +63,15 @@ pre-commit:
       tags: security
       name: squealer
       run: squealer --config-file ./.squealer.yml
+    gofmt:
+      tags: formatting
+      name: gofmt
+      run: gofmt -s -w .
+    gofumpt:
+      tags: gotool
+      name: gofumpt
+      run: gofumpt -l -w .
+    goimports:
+      tags: gotool
+      name: goimports
+      run: goimports -w .
