--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,19 @@
-{
-    "configurations": [
-        {
-            "name": "Docker: Python - General",
-            "type": "docker",
-            "request": "launch",
-            "preLaunchTask": "docker-run: debug",
-            "python": {
-                "pathMappings": [
-                    {
-                        "localRoot": "${workspaceFolder}",
-                        "remoteRoot": "/app"
-                    }
-                ],
-                "projectType": "general"
-            }
-        }
-    ]
-}
+// {
+//     "configurations": [
+//         {
+//             "name": "Docker: Python - General",
+//             "type": "docker",
+//             "request": "launch",
+//             "preLaunchTask": "docker-run: debug",
+//             "python": {
+//                 "pathMappings": [
+//                     {
+//                         "localRoot": "${workspaceFolder}",
+//                         "remoteRoot": "/app"
+//                     }
+//                 ],
+//                 "projectType": "general"
+//             }
+//         }
+//     ]
+// }
