--- a/squealer.yml
+++ b/squealer.yml
@@ -24,5 +24,5 @@ ignore_extensions:
   - .doc
   - .docx
 exceptions:
-  - exception: ''
-    reason: ''
+  - exception: .gitleaks.toml:Jf0Nch_68V5rCtbYQOsNrvb3yjg=
+    reason: linting config
